@@ -1,3 +1,8 @@
+2019-04-18  Richard Sandiford  <richard.sandiford@arm.com>
+
+	PR middle-end/85164
+	* gcc.dg/pr85164-1.c, gcc.dg/pr85164-2.c: New tests.
+
 2019-04-18  Richard Biener  <rguenther@suse.de>
 
 	PR debug/90131
